web/src/css/checkout.css
.spring-green{
  color:#66ff00;
}

.special-bitcoin{
/*  background-image: url("./bit-icons-01.png");*/
  background-size: 55%;
  background-repeat:no-repeat;
  background-position:center center;
}
/* pay language 14px and terms matches*/
.stripe-button, .bit-button{
  position:relative;
}
/*DEPOSIT BLOCK*/
.home-deposit-module *{
  color:white;
}
.stripe-button, .bit-button{
  color:black;
}
.special-bitcoin{
color:black;
text-transform: none;
}
.home-deposit-module::before{
  background: #171717;
  content:"";
  top:0;
  left:-27px;
  display: block;
  position: absolute;
  width:100vw;
  height:100%;
}
.home-deposit-module {
  color:white;
  background: #171717;
  position: relative;
}
.home-deposit-module-scroll{
  z-index: 99;
}
.dark-theme{
  background:#171717;
}
.home-deposit-module label{
  color:white;
}
.home-deposit-module .special-stripe{
  color:black;
  text-transform: none;
}
.black-footer{
  background: #171717;
}
.black-header{
  color:white;
}
.membership-page-module{
  top:-2rem;
}
.black-header .logo {
  filter:invert(1);
}
.gradient-to-black{
  background: linear-gradient(0deg,hsla(0,0%,9%,0),hsla(0,0%,9%,.55) 20%, hsla(0,0%,9%,.75) 40%,hsla(0,0%,9%,.96) 75%,hsla(0,0%,9%,.99));
}
.deposit-accordion *{
   background: transparent;
   text-transform: none;
}
.rte .deposit-accordion h2{
text-transform: none;
}
.deposit-accordion {
  border-top: 1px solid #FFFFFFBF;
  border-bottom: 1px solid #FFFFFFBF;
}
.stripe-button img, .bit-button img{
  position:absolute;
  height:25px;
  top: 50%;
  pointer-events: none;
  left:auto;
  right:16px;
  z-index: 2;
  transform: translate(0%, -50%);
}
#refundable-text-span, .home-deposit-module #spots-remaining-count span{
  color:#FFFFFFBF;
}
#deposit-text-span .discount-container{
  color:white;
}

#terms.alert::after{
  content:"* ";
  color:#fff;
  position: relative;
  margin-left:5px;
  display: inline-block;
}
#terms.alert *{
  color:#fff;
}
.white-box{
  box-shadow: 0px 0px 10px rgb(255 255 255 / 50%)
}
.stripe-button input[type=radio]{
  box-shadow:none;
  vertical-align: middle;
  height:60px !important;
  left:15px;
  top:4px;
  border:1px solid black;
  filter: none;
  left:-100px;
  overflow:visible;
  position:relative;
}
.stripe-button input[type=radio]:checked::before{
  content:"◉";
  color:white;
  font-size:16px;
  line-height: 3.7;
  left:115px;
}
.stripe-button input[type=radio]::before{
  content:"○";
  color:#FFFFFFBF;
  position:absolute;
  line-height: 1.8;
  left:115px;
}
.option-button-checkout{
  text-transform: none;
  background: transparent;
  border:1px solid #FFFFFFBF;
  padding:0.75rem 0;
  padding-left:40px;
  line-height: 0.1;
  display: inline-block;
  vertical-align: middle;
}

.stripe-button.bit-button img{
  position:absolute;
  height:25px;
  top: 50%;
  pointer-events: none;
  left:auto;
  right:16px;
  z-index: 2;
  transform: translate(0%, -50%);
}

.special-stripe{
/*  background-image: url(./stripe-icons-01.png);*/
  background-size: 85%;
  background-repeat:no-repeat;
  background-position:center center;
}
.special-stripe[disabled]{
/*  background-image: url(./stripe-icons2-01.png);*/
}
.bit-stripe[disabled]{
/*  background-image: url(./bit-icons2-01.png);*/
}
.discount-container{
  margin-bottom:0;
  display: inline-block;
  position: relative;
}
.spring-green-line{
  height:8px;
  background:#66ff00;
  width: 2.55em;
    left: -2.65em;
    top: 0.55em;
  position:absolute;
  display:inline-block;
}

.click-area{
  background: transparent;
  width:100vw;
  height:100vh;
  position: fixed;
}
.arrow-input-checkout{
  top:10px;
  right:5px;
}
#checkout-button-1{
  width:120px;
}
#checkout-button-2{
  width:150px;
  text-align:left;
}
.e-checkbox + a{
  border-bottom:2px solid;
}
label.terms-agreement{
  text-transform: none;
  margin-left:0;
  padding-left:0;
  color:#FFFFFFBF;
}
.terms-agreement a{
  text-transform: none;
  color:#FFFFFFBF;
  border-bottom:1px solid;
}
@media(max-width:767px){

  .stripe-button input[type=radio]:checked::before{
  content:"◉";
  line-height: 3;
  left:115px;
  top:7px;
  font-size:12px;
}
.stripe-button input[type=radio]::before{
  content:"○";
  position:absolute;
  line-height: 2.2;
  left:115px;
  font-size:20px;
}

    .e-checkbox + a{
    display: inline-block;
  border-bottom:1px solid;
  }
  .home-deposit-module::before{
    left:-0.625rem;
  }
  .option-button-checkout, .terms-agreement, .terms-agreement a{
    font-size:14px;
  }
  .stripe-button input[type=radio]{

  height:3rem !important;

}
  
  .stripe-button img, .stripe-button.bit-button img{
    height:14px;
    position:absolute;
    top: 50%;
  /*  left: calc(50% - 115px);*/
    z-index: 2;
    transform: translate(0%, -50%);
  }
  .stripe-button.bit-button img{
    height:14px;
    position:absolute;
    top: 50%;
/*    left: calc(50% - 72px);*/
    z-index: 2;
    transform: translate(0%, -50%);
  }
  .arrow-input-checkout{
    top:7px;
    right:5px;
  }
  .spring-green {
    color: #66ff00;
    position: relative;

  }


  .spring-green-line{
    height:4px;
  }
  .membership-deposit{
      max-width:300px;
    }
    .floor-plan-cap br{
    display:none;
  }
}

